--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.2-jre'
 
+    compileOnly "org.projectlombok:lombok:1.16.16"
+
+
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
