--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.2-jre'
 
     compileOnly "org.projectlombok:lombok:1.16.16"
-
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
