Update the way to read configuration file.
 LoadBalancer.readConfig() can handle the comments in the file now.
And user can set the load balancing algorithm in the file.
Default algorithm is Round Robin.

--- a/load.config
+++ b/load.config
@@ -1,4 +1,8 @@
-server web1 127.0.0.1 8002
-server web2 127.0.0.1 8003
-server web3 127.0.0.1 8004
-server web4 127.0.0.1 8005
+#setting
+
+backend
+balance static-rr
+server web1 127.0.0.1 8002 2
+server web2 127.0.0.1 8003 3
+server web3 127.0.0.1 8004 10
+server web4 127.0.0.1 8005 1
