--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ dependencies {
 
     compileOnly "org.projectlombok:lombok:1.16.16"
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-
+    
+    implementation 'ch.qos.logback:logback-classic:1.1.2'
+    implementation 'ch.qos.logback:logback-core:1.1.2'
+    implementation 'org.slf4j:slf4j-api:1.7.10'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
