--- a/load.config
+++ b/load.config
@@ -1,8 +1,8 @@
 #setting
 
 backend
-balance static-rr
-server web1 127.0.0.1 8002 4
-server web2 127.0.0.1 8003 2
+balance roundrobin
+server web1 127.0.0.1 8002 
+server web2 127.0.0.1 8003 
 server web3 127.0.0.1 8004 
-server web4 127.0.0.1 8005 5
+server web4 127.0.0.1 8005 
