Fix the function of reading a configuration file.

--- a/load.config
+++ b/load.config
@@ -1,7 +1,7 @@
 #setting
 
 backend
-balance roundrobin
+algo ip-hashings
 server web1 127.0.0.1 8002 
 server web2 127.0.0.1 8003 
 server web3 127.0.0.1 8004 
