--- a/load.conf
+++ b/load.conf
@@ -1,8 +1,8 @@
 #setting
 
 backend
-algo ip-hashing
-server web1 127.0.0.1 8002 
-server web2 127.0.0.1 8003 
-server web3 127.0.0.1 8004 
-server web4 127.0.0.1 8005 
+algo roundrobin
+server web1 127.0.0.1 8001
+#server web2 127.0.0.1 8003 
+#server web3 127.0.0.1 8004 
+#server web4 127.0.0.1 8005 
