--- a/load.conf
+++ b/load.conf
@@ -1,8 +1,8 @@
 #setting
 
 backend
-algo roundrobin
-server web1 127.0.0.1 8093
-#server web2 127.0.0.1 8003 
-#server web3 127.0.0.1 8004 
-#server web4 127.0.0.1 8005 
+algo leasts_conn
+server web1 127.0.0.1 8001 1
+server web2 127.0.0.1 8002 1
+server web3 127.0.0.1 8003 1
+server web4 127.0.0.1 8004 1
