--- a/load.conf
+++ b/load.conf
@@ -2,6 +2,6 @@
 
 backend
 server web1 127.0.0.1 8001 1
-#server web2 127.0.0.1 8002 1
-#server web3 127.0.0.1 8003 1
+server web2 127.0.0.1 8002 1
+#server web3 127.0.0.11 8003 1
 #server web4 127.0.0.1 8004 1
