--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.1.2'
     implementation 'ch.qos.logback:logback-core:1.1.2'
     implementation 'org.slf4j:slf4j-api:1.7.10'
+
+    implementation 'com.typesafe:config:1.4.0'
+
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
