--- a/load.conf
+++ b/load.conf
@@ -1,7 +1,27 @@
-#setting
+server {
+    root : /path/to/file
+    listen : 80
 
-backend
-server web1 127.0.0.1 8001 1
-#server web2 127.0.0.1 8002 1
-#server web3 127.0.0.11 8003 1
-#server web4 127.0.0.1 8004 1
+   
+#    location {
+#        "pattern" : "/php/",
+#        "proxy_pass" : "http://hello/"
+#    }
+
+#    location {
+#        "pattern" : "\.(css|js|jpg)$",
+#        "proxy_pass" : "http://wascluster/";
+#    }
+
+}
+
+
+upstream {
+    "name" : "hello",
+    "algo" : "ip_hash",
+
+    servers {
+        "server1" : ["127.0.0.1", "8001", "3"],
+        "server2" : ["127.0.0.1", "8002", "4"]
+    }
+}
