--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.10'
 
     implementation 'com.typesafe:config:1.4.0'
+    implementation 'org.apache.tika:tika-core:1.24.1'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
