Add Location class to route requests.

--- a/load.conf
+++ b/load.conf
@@ -1,20 +1,24 @@
 server {
-    root : /path/to/file
-    listen : 80
+    "root" : "/sites/demo",
+    "listen" : 8080
 
-   
-#    location {
-#        "pattern" : "/php/",
-#        "proxy_pass" : "http://hello/"
-#    }
-
-#    location {
-#        "pattern" : "\.(css|js|jpg)$",
-#        "proxy_pass" : "http://wascluster/";
-#    }
-
+    location : [
+        {
+            pattern : "/php/",
+            type : "prefix",
+            proxy_pass : "http://wascluster/"
+        },
+        {
+            pattern : "\\.(css|js|jpg)$",
+            type : "regex"
+        },
+        {
+            pattern : "/image.png",
+            type : "exact",
+            root :  "/www"
+        }
+    ]
 }
-
 
 upstream {
     "name" : "hello",
