--- a/load.conf
+++ b/load.conf
@@ -1,6 +1,6 @@
 server {
     "root" : "/sites/demo",
-    "listen" : 8080
+    "listen" : 8081
 
     location : [
         {
@@ -21,7 +21,7 @@ server {
 }
 
 upstream {
-    "name" : "hello",
+    "name" : "wascluster",
     "algo" : "ip_hash",
 
     servers {
