Fix directory response service to handle uri with regex.

--- a/load.conf
+++ b/load.conf
@@ -9,7 +9,7 @@ server {
             proxy_pass : "http://wascluster/"
         },
         {
-            pattern : "\\.(css|js|jpg)$",
+            pattern : "^.+\\.(css|js|jpg|png)$",
             type : "regex"
         },
         {
