--- a/load.conf
+++ b/load.conf
@@ -13,9 +13,9 @@ server {
             type : "regex"
         },
         {
-            pattern : "/image.png",
+            pattern : "/result.png",
             type : "exact",
-            root :  "/www"
+            root :  "/home/horoyoii/Desktop"
         }
     ]
 }
