Fix Router to handle default location.
If there is no corresponding location to given uri,
router returns default location.

--- a/load.conf
+++ b/load.conf
@@ -1,6 +1,6 @@
 server {
     "root" : "/sites/demo",
-    "listen" : 8081
+    "listen" : 8082
 
     location : [
         {
@@ -9,13 +9,18 @@ server {
             proxy_pass : "http://wascluster/"
         },
         {
-            pattern : "^.+\\.(css|js|jpg|png)$",
+            pattern : "^.+\\.(css|js|jpg)$",
             type : "regex"
         },
         {
             pattern : "/result.png",
             type : "exact",
             root :  "/home/horoyoii/Desktop"
+        },
+        {
+            pattern : "/images/",
+            type : "prefix",
+            root : "/var/www"      # uri : http://domain.com/images/hello.png ==>  /data/images/hello.png
         }
     ]
 }
