Fix UpstreamResponseService to serve requests.

--- a/load.conf
+++ b/load.conf
@@ -1,6 +1,6 @@
 server {
     "root" : "/sites/demo",
-    "listen" : 8082
+    "listen" : 8083
 
     location : [
         {
@@ -27,10 +27,11 @@ server {
 
 upstream {
     "name" : "wascluster",
-    "algo" : "ip_hash",
+    "algo" : "round_robin",
 
     servers {
-        "server1" : ["127.0.0.1", "8001", "3"],
-        "server2" : ["127.0.0.1", "8002", "4"]
+        "server1" : ["127.0.0.1", "8001", "1"],
+        "server2" : ["127.0.0.1", "8002", "1"],
+        "server3" : ["127.0.0.1", "8003", "1"],
     }
 }
